# demos

./: .gitignore  .pre-commit-config.yaml  README.md  pai.repos  pixi.toml  ruff.toml
.github/workflows/: build.yaml
demos/so_arm_101/: OLD_so_arm_demo.md  rosetta_end_to_end_demo.md
docker/: Dockerfile  docker-compose.yaml
docs/: DEVELOPMENT.md  calibration_guide.md
pai_assets/: CMakeLists.txt
pai_bringup/: CMakeLists.txt  package.xml
pai_bringup/config/cameras/: cameras.yaml  default_640x480.yaml  usb_cam_static.yaml  usb_cam_wrist.yaml
pai_bringup/config/control/: ros2_controllers.yaml  so_arm101.ros2_control.xacro
pai_bringup/config/hardware/: 99-so-arm101-cameras.rules.example  follower.yaml  leader.yaml
pai_bringup/config/lerobot/: follower_arm.json  leader_arm.json
pai_bringup/launch/: so_arm_gz_bringup.launch.py  so_arm_mujoco_bringup.launch.py  so_arm_real_bringup.launch.py
pai_bringup/mjcf/: scene.xml.xacro  scene_template.xml.xacro  so_arm101.xml.xacro
pai_bringup/urdf/: cameras.xacro  so_arm101_mujoco.urdf.xacro  so_arm_gz.urdf.xacro  so_arm_real.urdf.xacro
pai_data_collection/: README.md
pai_description/world/: so_arm_in_lightbox.sdf  so_arm_table.sdf
pai_leader_teleop/: CMakeLists.txt  README.md  package.xml
pai_leader_teleop/config/control/: ros2_controllers_leader.yaml  so_arm101_leader.ros2_control.xacro
pai_leader_teleop/config/hardware/: leader.yaml
pai_leader_teleop/config/rviz/: so_arm_leader.rviz
pai_leader_teleop/launch/: leader_bringup.launch.py
pai_leader_teleop/scripts/: leader_teleop_node
pai_leader_teleop/urdf/: so_arm_leader.urdf.xacro
scripts/: activate.sh  install_ml_deps.sh
(+7 files in other folders)
